<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpaceKid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnMulti">Multiplication</string>
    <string name="btnDivi">Division</string>
    <string name="btnAdd">Addition</string>
    <string name="btnSub">Subtraction</string>
    <string name="btnAbout">About</string>
    <string name="btnHigh">Highscore</string>
    <string name="welcome">Welcome</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="points">Points</string>
    <string name="question">Question</string>
    <string name="highscore">Highscore</string>
    <string name="about">SpaceKid App</string>
    <string name="num_fact">Num Fact</string>
    <string name="number_facts">Number Facts</string>
    <string name="enter_your_name_">Enter your Name.</string>

</resources>
