<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rit.axv3012.spacekid.MainActivity" >

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMulti"
        android:layout_below="@+id/btnDiv"
        android:layout_marginTop="68dp"
        android:text="@string/btnHigh"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnHigh"
        android:layout_alignBottom="@+id/btnHigh"
        android:layout_alignRight="@+id/btnDiv"
        android:text="@string/btnAbout"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/btnDivi"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHigh"
        android:layout_alignParentRight="true"
        android:text="@string/btnMulti"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnSubt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAddit"
        android:layout_alignBottom="@+id/btnAddit"
        android:layout_alignRight="@+id/btnMulti"
        android:text="@string/btnSub"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnAddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDiv"
        android:layout_marginBottom="52dp"
        android:onClick="additionClick"
        android:text="@string/btnAdd"
        android:textColor="#F0F7FF" />

    <Button
        android:id="@+id/btnNumFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHigh"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/btnAbout"
        android:text="@string/num_fact"
        android:textColor="#F0F7FF" />

</RelativeLayout>
